# kindle-to-text

./: .gitignore  .swp  README.md  app.py  kindle_to_text.py  pyproject.toml
KindleToPDF.app/Contents/: Info.plist
KindleToPDF.app/Contents/MacOS/: KindleToPDF
KindleToText.app/Contents/: Info.plist
KindleToText.app/Contents/MacOS/: KindleToText
