[project]
name = "kindle-to-text"
version = "0.1.0"
description = "Kindle Cloud Reader auto page-turn screenshot to PDF tool for macOS"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "Pillow>=10.0",
    "pyobjc-framework-Quartz>=10.0",
]

[project.scripts]
kindle-to-text = "kindle_to_text:main"
